[package]
name = "rust-project-init"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "init"
path = "src/main.rs"

[[example]]
name = "hello"
path = "src/example/type_value/hello.rs"

[[example]]
name = "variable"
path = "src/example/type_value/variable.rs"

[[example]]
name = "val"
path = "src/example/type_value/val.rs"

[[example]]
name = "operation"
path = "src/example/type_value/operation.rs"

[[example]]
name = "derivation"
path = "src/example/type_value/derivation.rs"

[[example]]
name = "fibonacci"
path = "src/example/type_value/fibonacci.rs"

[[example]]
name = "if"
path = "src/example/control_flow_basics/if.rs"

[[example]]
name = "cycle"
path = "src/example/control_flow_basics/cycle.rs"

[[example]]
name = "breakOrContinue"
path = "src/example/control_flow_basics/break_or_continue.rs"

[[example]]
name = "labels"
path = "src/example/control_flow_basics/labels.rs"

[[example]]
name = "scope"
path = "src/example/control_flow_basics/scope.rs"

[[example]]
name = "koraz"
path = "src/example/control_flow_basics/koraz.rs"

[[example]]
name = "fun"
path = "src/example/control_flow_basics/fun.rs"

[[example]]
name = "macro"
path = "src/example/control_flow_basics/macro.rs"

[[example]]
name = "arr"
path = "src/example/tup_arr/arr.rs"

[[example]]
name = "tup"
path = "src/example/tup_arr/tup.rs"

[[example]]
name = "arr_for"
path = "src/example/tup_arr/arr_for.rs"

[[example]]
name = "deconstruct"
path = "src/example/tup_arr/deconstruct.rs"

[[example]]
name = "nested"
path = "src/example/tup_arr/nested.rs"

[[example]]
name = "shared"
path = "src/example/quote/shared.rs"

[[example]]
name = "exclusive"
path = "src/example/quote/exclusive.rs"

[[example]]
name = "slices"
path = "src/example/quote/slices.rs"

[[example]]
name = "string"
path = "src/example/quote/string.rs"