[package]
name = "rust-project-init"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "init"
path = "src/main.rs"

[[example]]
name = "hello"
path = "src/example/type_value/hello.rs"

[[example]]
name = "variable"
path = "src/example/type_value/variable.rs"

[[example]]
name = "val"
path = "src/example/type_value/val.rs"

[[example]]
name = "operation"
path = "src/example/type_value/operation.rs"

[[example]]
name = "derivation"
path = "src/example/type_value/derivation.rs"

[[example]]
name = "fibonacci"
path = "src/example/type_value/fibonacci.rs"

[[example]]
name = "if"
path = "src/example/control_flow_basics/if.rs"

[[example]]
name = "cycle"
path = "src/example/control_flow_basics/cycle.rs"

[[example]]
name = "breakOrContinue"
path = "src/example/control_flow_basics/break_or_continue.rs"

[[example]]
name = "labels"
path = "src/example/control_flow_basics/labels.rs"

[[example]]
name = "scope"
path = "src/example/control_flow_basics/scope.rs"

[[example]]
name = "koraz"
path = "src/example/control_flow_basics/koraz.rs"

[[example]]
name = "fun"
path = "src/example/control_flow_basics/fun.rs"

[[example]]
name = "macro"
path = "src/example/control_flow_basics/macro.rs"

[[example]]
name = "arr"
path = "src/example/tup_arr/arr.rs"

[[example]]
name = "tup"
path = "src/example/tup_arr/tup.rs"

[[example]]
name = "arr_for"
path = "src/example/tup_arr/arr_for.rs"

[[example]]
name = "deconstruct"
path = "src/example/tup_arr/deconstruct.rs"

[[example]]
name = "nested"
path = "src/example/tup_arr/nested.rs"

[[example]]
name = "shared"
path = "src/example/quote/shared.rs"

[[example]]
name = "exclusive"
path = "src/example/quote/exclusive.rs"

[[example]]
name = "slices"
path = "src/example/quote/slices.rs"

[[example]]
name = "string"
path = "src/example/quote/string.rs"

[[example]]
name = "geometry"
path = "src/example/quote/geometry.rs"

[[example]]
name = "structs"
path = "src/example/customize_type/structs.rs"

[[example]]
name = "tup_structs"
path = "src/example/customize_type/tup_structs.rs"

[[example]]
name = "enums"
path = "src/example/customize_type/enums.rs"

[[example]]
name = "statics"
path = "src/example/customize_type/statics.rs"

[[example]]
name = "consts"
path = "src/example/customize_type/consts.rs"

[[example]]
name = "type_alias"
path = "src/example/customize_type/type_alias.rs"

[[example]]
name = "elevator_incident"
path = "src/example/customize_type/elevator_incident.rs"

[[example]]
name = "matching_values"
path = "src/example/pattern_matching/matching_values.rs"

[[example]]
name = "deconstruct_match"
path = "src/example/pattern_matching/deconstruct_match.rs"

[[example]]
name = "let_control_flow"
path = "src/example/pattern_matching/let_control_flow.rs"

[[example]]
name = "expression_evaluation"
path = "src/example/pattern_matching/expression_evaluation.rs"

[[example]]
name = "methods"
path = "src/example/method_traits/methods.rs"

[[example]]
name = "traits"
path = "src/example/method_traits/traits.rs"

[[example]]
name = "more_traits"
path = "src/example/method_traits/more_traits.rs"

[[example]]
name = "shared_types"
path = "src/example/method_traits/shared_types.rs"

[[example]]
name = "derived_traits"
path = "src/example/method_traits/derived_traits.rs"

[[example]]
name = "traits_logs"
path = "src/example/method_traits/traits_logs.rs"

[[example]]
name = "generics_fn"
path = "src/example/method_traits/generics_fn.rs"

[[example]]
name = "generics_type"
path = "src/example/method_traits/generics_type.rs"

[[example]]
name = "generics"
path = "src/example/method_traits/generics.rs"

[[example]]
name = "feature_boundary"
path = "src/example/method_traits/feature_boundary.rs"

[[example]]
name = "generics_impl_traits"
path = "src/example/method_traits/generics_impl_traits.rs"